sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: not found: value échangé
	while ( (ecart > 1 ) || ( échangé == true  ) ) {
                                  ^AlgCombSort:8: error: not found: value échangé
		échangé = false
                ^